--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/AdminFeedbacks/Add.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/AdminFeedbacks/Add.cshtml
@@ -1,18 +1,10 @@
-﻿@using ReHouse.Utils.DataBase.Security
-@model User
+﻿@using ReHouse.Utils.DataBase.Feedback
+@model AdminFeedback
 @{
     Layout = "~/Areas/Cabinet/Views/Shared/_Layout.cshtml";
 }
-@section scripts{
-    <script>
-        var counter = parseInt($('#counter').val());
-        function addPhone() {
-            $('#phonebtn').before('<tr><td>Телефон:</td><td><input type="text" name="Phones[' + counter + '].Telephone" /></td></tr>');
-            counter += 1;
-        }
-    </script>
-}
-@Html.Partial("_navigation", "users")
+
+@Html.Partial("_navigation", "adminfeedbacks")
 
 <div id="adminka1" class="tabset_content tabset_content_active">
     <h2 class="tabset_label">adminka</h2>
@@ -24,63 +16,23 @@
             <div class="contact_info">
                 <table>
                     <tr>
+                        <td>Фото:</td>
                         <td><input type="file" name="image" /></td>
                     </tr>
                     <tr>
-                        <td>Email:</td>
+                        <td>Имя:</td>
                         <td>
-                            @Html.TextBoxFor(m => m.Email)
+                            @Html.TextBoxFor(m => m.Username)
                         </td>
                     </tr>
-                    <tr>
-                        <td>Логин для входа:</td>
-                        <td>@Html.TextBoxFor(m => m.Login)</td>
-                    </tr>
-                    <tr>
-                        <td>Имя:</td>
-                        <td>@Html.TextBoxFor(m => m.FirstName)</td>
-                    </tr>
-                    <tr>
-                        <td>Фамилия:</td>
-                        <td>@Html.TextBoxFor(m => m.SecondName)</td>
-                    </tr>
-                    <tr>
-                        <td>Отчество:</td>
-                        <td>@Html.TextBoxFor(m => m.FatherName)</td>
-                    </tr>
-                    <tr>
-                        <td>Имя в Messenger:</td>
-                        <td>@Html.TextBoxFor(m => m.MessengerName)</td>
-                    </tr>  
-                    <tr>
-                        <td>Позиция сортировки:</td>
-                        <td>@Html.TextBoxFor(m => m.OrderByField, new { @type = "number" })</td>
-                    </tr>
-                    @*<tr>
-                            <td>О себе:</td>
-                            <td>@Html.TextAreaFor(m => m.About, new { @rows = "4" })</td>
-                        </tr>*@
                     <tr>
                         <td>Адрес:</td>
                         <td>@Html.TextBoxFor(m => m.Adress)</td>
                     </tr>
                     <tr>
-                        <td>Должность:</td>
-                        <td>@Html.TextBoxFor(m => m.Position)</td>
+                        <td>Текст отзыва:</td>
+                        <td>@Html.TextAreaFor(m => m.Description, new { @rows = "4" })</td>
                     </tr>
-                    <tr>
-                        <td>Телефон:</td>
-                        <td>
-                            <input type="hidden" id="counter" name="counter" value="1" />
-                            <input type="text" name="Phones[0].Telephone" />
-                        </td>
-                    </tr>
-
-                    <tr id="phonebtn">
-                        <td></td>
-                        <td><a onclick="addPhone();">Добавить еще телефон</a></td>
-                    </tr>
-
                     <tr>
                         <td></td>
                         <td><button>Сохранить</button></td>
