--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/AdminFeedbacks/List.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/AdminFeedbacks/List.cshtml
@@ -1,16 +1,16 @@
-﻿@using ReHouse.Utils.Helpers
-@using ReHouse.Utils.DataBase.Security;
-@model List<User>
+﻿@using ReHouse.Utils.DataBase.Feedback
+@model List<AdminFeedback>
 @{
     Layout = "~/Areas/Cabinet/Views/Shared/_Layout.cshtml";
 }
-@Html.Partial("_navigation", "users")
+
+@Html.Partial("_navigation", "adminfeedbacks")
 
 <div id="adminka2" class="tabset_content">
     <div class="headline">
-        <h2>Сотрудники компании</h2>
-        <form method="LINK" action="/cabinet/managers/add">
-            <button>Добавить сотрудника ►</button>
+        <h2>Отзывы слайдера</h2>
+        <form method="LINK" action="/cabinet/adminfeedbacks/add">
+            <button>Добавить отзыв ►</button>
         </form>
     </div>
 
@@ -20,13 +20,13 @@
         <div class="added">
             <button onclick="deleteChekedProducts();" class="delete_all">Удалить выбранные</button>
             <table class="added" id="data-container">
-                @Html.Partial("Manager/_listOfManagers", Model)
+                @Html.Partial("AdminFeedback/_listOfFeedbacks", Model)
             </table>
         </div>
         <div>
             <div class="products1">
                 <div id="button-more">
-                    <a id="more">Больше сотрудников</a>
+                    <a id="more">Больше отзывов</a>
                 </div>
             </div>
         </div>
@@ -37,10 +37,10 @@
 
 </div>
 @section scripts {
-    @Scripts.Render("~/bundles/deleteManagers")
+    @Scripts.Render("~/bundles/deleteFeedbacks")
 
     <script>
-        var url = "/cabinet/managers/load";
+        var url = "/cabinet/adminfeedbacks/load";
         $('#button-more').click(function () {
 
             var obj = {
