--- a/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
@@ -230,7 +230,7 @@
                 </td>
             </tr>
             <tr>
-                <td>Отдел продаж</td>
+                <td>Телефон для связи</td>
                 <td>
                     @{s = ""; }
                     @for (int i = 0; i < Model.NewBuilding.Phones.Count; i++)
