--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -166,6 +166,9 @@
                  </a>
              </div>-->
             <div class="share_icons">
+                <div class="advert_id">
+                    <h2>№@Model.Advert.Id</h2>
+                </div>
                 <div class="share_fb">
                     <a onclick="Share.facebook(event, 'http://rehouse-realty.com.ua/sale/detail/@(Model.Advert.Id)', 'Продам @Model.Advert.Title.RussianName, @Model.Advert.Street', 'http://rehouse-realty.com.ua@(Url.Content(Model.Advert.Images?.FirstOrDefault() != null ? Model.Advert.Images.FirstOrDefault().Url + Model.Advert.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(Model.Advert.Description?.Replace(Environment.NewLine, " "))')"></a>
                 </div>
@@ -174,10 +177,7 @@
                 </div>
                 <div class="share_tw">
                     <a onclick="Share.twitter(event, 'http://rehouse-realty.com.ua/sale/detail/@(Model.Advert.Id)', 'Продам @Model.Advert.Title.RussianName, @Model.Advert.Street')"></a>
-                </div>
-                <div class="advert_id">
-                    <h2>№@Model.Advert.Id</h2>
-                </div>
+                </div>                
             </div>
 
             <div class="h2sale"><h2>Продам @Model.Advert.Title.RussianName</h2></div>
@@ -208,7 +208,7 @@
                 <div><img src="/Content/images/m2.png" height="32" alt=""><p>@(Model.Advert.AdvertPropertyValues.Any(x => x.AdvertPropertyId == 3) ? Model.Advert.AdvertPropertyValues.FirstOrDefault(x => x.AdvertPropertyId == 3).PropertiesValue : "0") м²</p></div>
                 <div><img src="/Content/images/m21.png" height="32" alt=""><p>@(Model.Advert.AdvertPropertyValues.Any(x => x.AdvertPropertyId == 7) ? Model.Advert.AdvertPropertyValues.FirstOrDefault(x => x.AdvertPropertyId == 7).PropertiesValue : "0") м²</p></div>
             </div>
-            <p class="text">@Model.Advert.Description</p>
+            <p class="text">@Html.Raw(Model.Advert.Description)</p>
         </div>
         <div class="table_of_prodapart">
             <table>
