--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -445,7 +445,7 @@
 
         });
     </script>
-    @if (ViewBag.Feedbacks != null)
+    @if (ViewBag.Feedbacks != null && ViewBag.Feedbacks.Count > 0)
     {
         <script type="text/javascript">
             $(function () {
