--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -157,7 +157,7 @@
         }
         else if (Model.Advert.IsNew)
         {
-            <div class="redimg"><img src="~/Content/images/newred.png"></div>
+            <div class="redimg"><img src="~/Content/images/newred.jpg"></div>
         }
         <div class="seotext3">
             <!-- <div class="print">
