--- a/ReHouse.FrontEnd/Views/Special/Sale.cshtml
+++ b/ReHouse.FrontEnd/Views/Special/Sale.cshtml
@@ -5,15 +5,19 @@
     TagPage tagPage = ViewBag.TagPage as TagPage;
 }
 <span class="none">
+    </div>
     <div class="navigation_string">
-        <div class="way">
-            <a href="/">Главная</a>
-            <pre> </pre>
-            <p>/</p>
-            <pre> </pre>
-            <a href="/special/sale/@tagPage.ShortName">@tagPage.RussianName</a>
+        <div class="container">
+            <div class="way">
+                <a href="/">Главная</a>
+                <pre> </pre>
+                <a>/</a>
+                <pre> </pre>
+                <a href="/special/sale/@tagPage.ShortName">@tagPage.RussianName</a>
+            </div>
         </div>
     </div>
+    <div class="container">
 </span>
 <div class="h2novostroy"><h2>@tagPage.RussianName</h2></div>
 
