--- a/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
@@ -27,7 +27,7 @@
                 arrows: true,
                 buttons: false,
                 fullScreen: true,
-                shuffle: true,
+                shuffle: false,
                 smallSize: 500,
                 mediumSize: 1000,
                 largeSize: 3000,
@@ -99,26 +99,24 @@
                 <div id="products_example">
                     <div id="products">
                         <div class="sp-slides">
-                            @if (Model.Advert.Images != null && Model.Advert.Images.Count > 0)
+                            @if (Model.NewBuilding.Images != null && Model.NewBuilding.Images.Count > 0)
                             {
-                                foreach (var item in Model.Advert.Images)
+                                foreach (var item in Model.NewBuilding.Images)
                                 {
                                     <div class="sp-slide">
-                                        <img class="sp-image" src="@Url.Content(item.Url + item.FileName)?w=767&h=600&mode=max"
-                                             data-src="@Url.Content(item.Url + item.FileName)?w=767&h=600&mode=max" />
+                                        <img class="sp-image" src="@Url.Content(item.Url + item.FileName)?w=600&h=312&mode=max"
+                                             data-src="@Url.Content(item.Url + item.FileName)?w=1500&h=1500&mode=max" />
                                     </div>
-
                                 }
                             }
-                            @if (Model.Advert.PlanImages != null && Model.Advert.PlanImages.Count > 0)
+                            @if (Model.NewBuilding.PlanImages != null && Model.NewBuilding.PlanImages.Count > 0)
                             {
-                                foreach (var item in Model.Advert.PlanImages)
+                                foreach (var item in Model.NewBuilding.PlanImages)
                                 {
                                     <div class="sp-slide">
-                                        <img class="sp-image" src="@Url.Content(item.Url + item.FileName)?w=767&h=600&mode=max"
-                                             data-src="@Url.Content(item.Url + item.FileName)?w=767&h=600&mode=max" />
+                                        <img class="sp-image" src="@Url.Content(item.Url + item.FileName)?w=600&h=312&mode=max"
+                                             data-src="@Url.Content(item.Url + item.FileName)?w=1500&h=1500&mode=max" />
                                     </div>
-
                                 }
                             }
                         </div>
