--- a/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildingsCarousel.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/NewB/_listOfNewBuildingsCarousel.cshtml
@@ -32,18 +32,18 @@
                     {
                         <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
                     }
-                    <div class="meters">
+                    @*<div class="meters">
                         <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>0 м²</p></div>
                         <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>0 м²</p></div>
-                    </div>
+                    </div>*@
                     <div class="bottom">
                         <div><p class="cost">от @item.Price.ToString("# ### ##0")грн/м²</p></div>
                         <div class="share" tabindex="0" onclick="share(this, event);"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                         <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this, event);"></div>
                         <div class="shared_icons">
-                            <a onclick="Share.facebook(event, 'http://rehouse-realty.com.ua/rent/detail/@(item.Id)', '@item.Name, @item.Adress', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))'" class="fb"></a>
-                            <a onclick="Share.vkontakte(event, 'http://rehouse-realty.com.ua/rent/detail/@(item.Id)', '@item.Name, @item.Adress', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))')" class="vk"></a>
-                            <a onclick="Share.twitter(event, 'http://rehouse-realty.com.ua/rent/detail/@(item.Id)', '@item.Name, @item.Adress')" class="tw"></a>
+                            <a onclick="Share.facebook(event, 'http://rehouse-realty.com.ua/newbuilding/detail/@(item.Id)', '@item.Name, @item.Adress', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))')" class="fb"></a>
+                            <a onclick="Share.vkontakte(event, 'http://rehouse-realty.com.ua/newbuilding/detail/@(item.Id)', '@item.Name, @item.Adress', 'http://rehouse-realty.com.ua@(Url.Content(item.Images?.FirstOrDefault() != null ? item.Images.FirstOrDefault().Url + item.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(item.Description?.Replace(Environment.NewLine, " "))')" class="vk"></a>
+                            <a onclick="Share.twitter(event, 'http://rehouse-realty.com.ua/newbuilding/detail/@(item.Id)', '@item.Name, @item.Adress')" class="tw"></a>
                         </div>
                     </div>
                 </div>
