--- a/ReHouse.FrontEnd/Content/mobile.css
+++ b/ReHouse.FrontEnd/Content/mobile.css
@@ -312,7 +312,7 @@
 
 
 @media(max-width:1900px) and (min-width:769px) {
-
+    
     .wrapper-prod {
         min-width: 1200px;
     }
@@ -323,6 +323,17 @@
 
 
 @media(max-width:768px) {
+    .d-carousel .jcarousel-item-horizontal {
+       margin-left: 0px;
+        margin-right:11px;
+    }
+    .d-carousel .jcarousel-item {
+    width: 390px;
+    height: 447px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    margin-top: 0px!important;
+}
     #nav.fixed {
         display:none;
     }
@@ -576,7 +587,7 @@
 
     .header_mobile .header .logo {
         margin-left: 40.5%;
-        margin-top: 1px;
+        margin-top: 7px;
     }
 
     .header_mobile .header .contactinfo .tel {
@@ -671,6 +682,7 @@
     margin: auto;
     margin-bottom: 182px;
     line-height: 24px;
+    font-size: 16px;
 }
 .inner-testimonial img {
     margin-bottom: 5px;
@@ -679,7 +691,7 @@
     margin-bottom: 8px;
 }
 .thumbs {
-    top: 336px;
+    top: 347px;
     left: 342px;
 }
 
@@ -689,7 +701,7 @@
     flex-direction: column;
     background-color: #f3f3f9;
     justify-content: space-around;
-        margin-top: -45px;
+        margin-top: -205px;
     position: static;
 }
 .news .content1, .content2 {
@@ -1476,7 +1488,7 @@
         }
 
     .header_mobile .header .logo {
-        margin-top: 5px;
+        margin-top: 8px;
         margin-left: 36.5%;
     }
 
@@ -1541,7 +1553,7 @@
     
         .news {
     width: 480px;
-    margin-top: -90px;
+    margin-top: -205px;
 }
     
 .news .content1, .content2 {
@@ -2418,7 +2430,7 @@
     }
 
     .header_mobile .header .logo {
-        margin-top: 5px;
+        margin-top: 8px;
         margin-left: 34%;
     }
 .hidden-menu-ticker:checked ~ .btn-menu {
@@ -2564,7 +2576,7 @@
         display:none;
     }
 #testimonials {
-    margin-bottom: 90px;
+    margin-bottom: 155px;
 }
     .h2novostroy .favorite {
         position: relative;
