--- a/ReHouse.FrontEnd/Views/Error/InternalServerError.cshtml
+++ b/ReHouse.FrontEnd/Views/Error/InternalServerError.cshtml
@@ -1,14 +1,7 @@
-﻿@{
-    Layout = "../Shared/_Layout.cshtml";
-}
-
-
-<div class="nothing-found">
+﻿<div class="nothing-found">
 
     <h3 class="errorFound">
         Произойшла внутренняя ошибка сервера.
     </h3>
-    <h4>
-        @Html.HtmlText("Ошибка 500. <br/>Приносим свои извинения за причиненный неудобства.<br/> С ув. команда Itfamily.</b>")
-    </h4>
+    <a class="backonmain" href="/">Вернуться на главную</a>
 </div>
