--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -96,7 +96,6 @@
                             @if (!String.IsNullOrEmpty(session.User.Login))
                             {
                                 <div class="your_login"><p><a href="/cabinet/profile/" class="">@session.User.Login</a></p></div>
-
                             }
                             else
                             {
@@ -121,7 +120,6 @@
                 </div>
             </span>
         </div>
-
     </div>
 
     <div id="nav">
@@ -286,8 +284,8 @@
                 </div>
                 <div class="tel">
                     <div class="number">
-                        <div><img src="~/Content/images/tel.png"><p>+38093 057 7110</p></div>
-                        <div><img src="~/Content/images/tel.png"><p>+38048 788 6707</p></div>
+                        <div><img src="~/Content/images/tel.png"><p>048 796 46 43</p></div>
+                        <div><img src="~/Content/images/tel.png"><p>048 788 67 07</p></div>
                     </div>
                 </div>
             </div>
