--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -1042,7 +1042,7 @@ border-bottom: none;
     flex-direction:row;
     background-color:#f3f3f9;
         justify-content: space-around;
-            margin-top: -105px;
+            margin-top: -70px;
     position: absolute;
 }
 
@@ -1306,7 +1306,7 @@ width: 545px;
     text-decoration:none;
     transition:.4s ease;
 }
-.news123 .content1 a {
+.news123 .content1 a:hover {
     color:grey;
 }
 .news123 .content1 {
@@ -1679,16 +1679,11 @@ width: 545px;
     cursor: pointer;
     display: none;
     opacity: .8;
-    color:#114a82;
-    border: 1px solid #114a82;
+    color:#f9a320;
+        border: 1px solid #f9a320;
     z-index:199999999999;
 }
 
-    #toTop:hover {
-        color:#f9a320;
-        border: 1px solid #f9a320;
-        transition:.5s ease;
-    }
 
 .login-form {
     width: 228px;
