--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -3880,6 +3880,7 @@ margin-bottom:30px;
     color: #f9a320;
     border:1px solid #f9a320;
     transition:.5s ease;
+    padding: 17px 0 16px 0;
 }
 
 .wrapper-prod .right .fav-wrap .favorite1 a:hover span {
