--- a/ReHouse.FrontEnd/Content/mobile.css
+++ b/ReHouse.FrontEnd/Content/mobile.css
@@ -2750,12 +2750,12 @@
     width: 100%;
 }
 .news123 .content1 .img {
-        width: 300px;
-    height: 190px;
+        width: 320px;
+    height: 100%;
     object-fit: cover;
 }
 .news123 .content1 .img img {
-        width: 300px!important;
+        width: 320px!important;
     height: auto!important;
     object-fit: cover!important;
 }
