--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -182,7 +182,7 @@
                     if (slide.IsVideo)
                     {
                         <a class="video" href="@slide.Url" data-autovideo="1">
-                            <b data-src="~/Content/images/4.png"></b>
+                            <b data-src="/Content/images/4.png"></b>
                             <div class="inslider">
                                 @Html.Raw(slide.Text)
                                 @* <button>Подробнее</button>*@
