--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Partners/List.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Partners/List.cshtml
@@ -1,63 +1,32 @@
 ﻿@using ReHouse.Utils.Helpers
-@using ReHouse.Utils.DataBase.Common;
-@model List<SliderParam>
+@using ReHouse.Utils.DataBase.News;
+@model List<Partner>
 @{
     Layout = "~/Areas/Cabinet/Views/Shared/_Layout.cshtml";
 }
-@Html.Partial("_navigation", "slider")
-<style>
-    .added table tr td {
-        padding: 10px;
-        text-align:center;
-    }
-</style>
+@Html.Partial("_navigation", "partners")
 <div id="adminka2" class="tabset_content">
     <div class="headline">
-        <h2>Настройка слайдера</h2>
-    </div>
-    <div class="added">
-        <form method="post" enctype="multipart/form-data">
+        <h2>Добавленные партнеры</h2>
+        <form method="post" enctype="multipart/form-data" action="/cabinet/partners/add" >
             @Html.AntiForgeryToken()
-                @{ var i = 0; }
-                @foreach (var item in Model)
-                {
-                    <table class="added" id="data-container">
-                        <tr>
-                            <td rowspan="4">@(i+1)</td>
-                            <td>Видео</td>
-                            <td>Ссылка на видео</td>
-                            <td>Изображение</td>
-                        </tr>
-                        <tr>
-                            <input type="hidden" name="Param[@i].Id" value="@item.Id" />
-                            <td>@Html.CheckBox("Param[" + i + "].IsVideo", item.IsVideo)@*<input type="checkbox" name="" class="checkbox" id="checkbox" checked="@item.IsVideo" style="width:20px;" />*@</td>
-                            <td><input type="text" name="Param[@i].Url" value="@item.Url" style="width:400px;"/></td>
-                            <td>
-                                @if (!item.IsVideo && !String.IsNullOrEmpty(item.Url))
-                                {
-                                    <img src="@Url.Content(item.Url)?w=200&h=150&mode=max" />
-                                }
-                            </td>
-                        </tr>
-                        <tr>
-                            <td colspan="2" style="min-width:610px;">Текст</td>
-                            <td>Загрузка изображения</td>
-                        </tr>
-                        <tr>
-                            <td colspan="2">@Html.TextArea("Param[" + i + "].Text", new { @rows = "30", @cols = "30", @class = "wyiswyg" })</td>
-                            <td><input type="file" name="Param[@i].Image" /></td>
-                        </tr>
-                    </table>
-                    i++;
-                }
-            <button type="submit">Сохранить</button>
+            <input type="file" name="image" />
+            <button>Добавить партнера ►</button>
         </form>
     </div>
+
+    @if (!ViewBag.NoElements)
+    {
+
+        <div class="added">
+            <button onclick="deleteChekedProducts();" class="delete_all">Удалить выбранные</button>
+            <table class="added" id="data-container">
+                @Html.Partial("Partner/_listOfPartners", Model)
+            </table>
+        </div>        
+    }
+
 </div>
 @section scripts {
-    <script>
-        $(function () {
-            $("textarea.wyiswyg").jqte();
-        });
-    </script>
+    @Scripts.Render("~/bundles/deletePartners")
 }
