--- a/ReHouse.FrontEnd/Views/Shared/Partial/_newsFeedbacks.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Partial/_newsFeedbacks.cshtml
@@ -1,56 +1,60 @@
 ﻿@using ReHouse.Utils.DataBase.News
 @using ReHouse.Utils.DataBase.Feedback
+
 @if (ViewBag.Articles != null)
 {
     <div id="testimonials1">
         <div class="container" id="container">
         </div>
     </div>
-    if (ViewBag.Feedbacks != null)
-    {
-        <div id="testimonials">
-            <div class="container" id="container">
-                <div class="f-next"></div>
-                <div class="f-previous"></div>
-                <div class="thumbs">
-                    @for (var i = 1; i <= ViewBag.Feedbacks.Count; i++)
-                    {
-                        <a href="#" onclick="" class="f@(i) @(i == 1? "thumbActive": "")"></a>
-                    }
-                </div>
-                <ul>
-                    @foreach (AdminFeedback fb in ViewBag.Feedbacks)
-                    {
-                        <li>
-                            <div class="item">
-                                <div class="inner-testimonial">
-                                    <div class="client">
-                                        @if (fb.Image != null)
-                                        {
-                                            <div class="picture"><img src="@Url.Content(fb.Image.Url + fb.Image.FileName)?w=101&h=100&mode=max" class="full-opacity" title="@fb.Image.Title" alt="@fb.Image.Alt"></div>
-                                        }
-                                        else
-                                        {
-                                            <div class="picture"><img src="~/Content/images/client2.png" class="full-opacity" alt="Клиент 2"></div>
-                                        }
-                                        <div class="information">
-                                            <h3 class="city-name">@fb.Username</h3>
-                                            <h4 class="city-name">@fb.Adress</h4>
-                                            </div>
-                                        </div>
-                                        <img src="~/Content/images/qq.png" />
-                                        <p class="text-testimonial">@fb.Description</p>
+}
+@if (ViewBag.Feedbacks != null)
+{
+    <div id="testimonials">
+        <div class="container" id="container">
+            <div class="f-next"></div>
+            <div class="f-previous"></div>
+            <div class="thumbs">
+                @for (var i = 1; i <= ViewBag.Feedbacks.Count; i++)
+                {
+                    <a href="#" onclick="" class="f@(i) @(i == 1? "thumbActive": "")"></a>
+                }
+            </div>
+            <ul>
+                @foreach (AdminFeedback fb in ViewBag.Feedbacks)
+                {
+                    <li>
+                        <div class="item">
+                            <div class="inner-testimonial">
+                                <div class="client">
+                                    @if (fb.Image != null)
+                                    {
+                                        <div class="picture"><img src="@Url.Content(fb.Image.Url + fb.Image.FileName)?w=101&h=100&mode=max" class="full-opacity" title="@fb.Image.Title" alt="@fb.Image.Alt"></div>
+                                    }
+                                    else
+                                    {
+                                        <div class="picture"><img src="~/Content/images/client2.png" class="full-opacity" alt="Клиент 2"></div>
+                                    }
+                                    <div class="information">
+                                        <h3 class="city-name">@fb.Username</h3>
+                                        <h4 class="city-name">@fb.Adress</h4>
                                     </div>
                                 </div>
-                            </li>
-                    }
-                </ul>
-            </div>
+                                <img src="~/Content/images/qq.png" />
+                                <p class="text-testimonial">@fb.Description</p>
+                            </div>
+                        </div>
+                    </li>
+                }
+            </ul>
         </div>
-    }
+    </div>
+}
+@if (ViewBag.Articles != null)
+{
     <div class="news">
         @foreach (Article article in ViewBag.Articles)
-                {
+        {
             <a href="/news/detail/@article.Id">
                 <div class="firstnews">
                     <div class="content1">
@@ -74,7 +78,9 @@
     <div class="morenews">
         <a href="/news/" id="more">Все новости</a>
     </div>
-
+}
+@if (ViewBag.Partners != null)
+{
     <div class="container" id="container">
         <div class="h23"><h2><span>Наши</span> партнеры</h2></div>
         <div id="partners">
@@ -83,26 +89,13 @@
             <div class="p-previous"></div>
 
             <ul>
-                <li>
-                    <img src="~/Content/images/bud.png" />
-                </li>
-                <li>
-                    <img src="~/Content/images/kadorr.png" />
-                </li>
-                <li>
-                    <img src="~/Content/images/od.png" />
-                </li>
-                <li>
-                    <img src="~/Content/images/ok.png" />
-                </li>
-                <li>
-                    <img src="~/Content/images/riv.png" />
-                </li>
-                <li>
-                    <img src="~/Content/images/gefest.png" />
-                </li>
+                @foreach (Partner partner in ViewBag.Partners)
+                {
+                    <li>
+                        <img src="@Url.Content(partner.Image.Url + partner.Image.FileName)" />
+                    </li>
+                }
             </ul>
-
         </div>
     </div>
 }
