--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -4329,6 +4329,6 @@ margin-bottom:30px;
                 flex-grow: 1;
     margin-left: -15px;
 }
-input[type=text], input[type=submit], textarea, select {
+input[type=text], input[type=submit], textarea, select, a, p {
 	-webkit-appearance: none;
 } 
