--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -1,9 +1,9 @@
 ﻿@using ReHouse.Utils.Helpers
-@using System.Globalization;
+@using System.Globalization
 @model ReHouse.FrontEnd.Models.LoadAdvertModel
 
 @section scripts {
-    @Scripts.Render("~/bundles/slides");
+    @Scripts.Render("~/bundles/slides")
     <script>
         //$(function () {
         //    $('#products').slides({
