--- a/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
@@ -1,8 +1,8 @@
 ﻿@using ReHouse.Utils.Helpers
-@using System.Globalization;
+@using System.Globalization
 @model ReHouse.FrontEnd.Models.LoadNewBuildingModel
 @section scripts {
-    @Scripts.Render("~/bundles/slides");
+    @Scripts.Render("~/bundles/slides")
     <script>
         //$(function () {
         //    $('#products').slides({
