--- a/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
@@ -1,10 +1,10 @@
 ﻿@using ReHouse.Utils.Helpers
-@using System.Globalization;
+@using System.Globalization
 @model ReHouse.FrontEnd.Models.LoadAdvertModel
 @*@Styles.Render("~/bundles/fancybox");*@
 
 @section scripts {
-    @Scripts.Render("~/bundles/slides");
+    @Scripts.Render("~/bundles/slides")
     <script>
         //$(function () {
         //    $('#products').slides({
