--- a/ReHouse.FrontEnd/Content/mobile.css
+++ b/ReHouse.FrontEnd/Content/mobile.css
@@ -323,6 +323,14 @@
 
 
 @media(max-width:768px) {
+   .contactinfo .number div a[href^=tel] {
+       color:#fff;
+    text-decoration: none;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+}
     .d-carousel ul li:hover {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
